[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "app"
version = "0.0.1"
authors = [
  { name="Kevin McQuate" },
]
description = "Weather ETL"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

